第二次註解

--- a/pages/hw04.html
+++ b/pages/hw04.html
@@ -14,14 +14,14 @@
             </div>
             <div class="meun">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="../pages/index.html">Home</a></li>
                     <li><a href="../pages/hw01.html"">Shop</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Account</a></li>
                 </ul>
             </div>  
             <div>
-                <a href="" >
+                <a href="../pages/cart.html" >
                     <img src="../assets/img/car.png" width="30px" height="30px">
                 </a>
             </div>
@@ -60,6 +60,10 @@
         <div class="mySlides">
          <img class="img01" src="../assets/img/img17.jpg">
         </div>
+
+        <div class="mySlides">
+            <img class="img01" src="../assets/img/img27.jpg">
+           </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
@@ -114,5 +118,28 @@
       slides[slideIndex - 1].style.display = "block";
     }
 </script>
+
+<div class="footer">
+    <div class="row">
+        <div class="container1">
+            <div class="footer-col2">
+                <img src="../assets/img/img01.jpg">                    
+            </div>
+            <div class="footer-col3">
+                <a href="https://www.instagram.com/yuweaves/">
+                     <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col4">
+                <h3>聯絡我們</h3>
+                <ul>
+                    <li>電話: +886-3-265-9999</li>
+                    <li>傳真：+886-3-265-8888</li>
+                    <li>地址: 320314 桃園市中壢區中北路200號</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
