--- a/pages/index.html
+++ b/pages/index.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="img/logo.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="250px">
             </div>
         <nav class="meun">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <li><a href="../pages/index.html">Home</a></li>
+                <li><a href="../pages/hw01.html">shop</a></li>
+                <a href="">
                     <li>Contact</a></li>
                 </a>
                 <li><a href="#">Account</a></li>
             </ul>
         </nav>
         <a>
-            <a href="cart.html">
-                <img src="img/cart.webp" width="30px" height="30px">
+            <a href="../pages/cart.html">
+                <img src="../assets/img/car.png" width="30px" height="30px">
             </a>
         </div>
         </div>
@@ -54,10 +54,10 @@
     <div class="row">
         <div class="col1">
             <h1>用心與線向您<br>郁織零用錢!</h1>
-            <a href="product.html" class="btn">探索一下 &#8594;</a>
+            <a href="../pages/hw01.html" class="btn">探索一下 &#8594;</a>
         </div>
         <div class="col2">
-            <img src="img/slag.jpg">
+            <img src="../assets/img/img04.jpg">
         </div>
      </div>
     </div>
@@ -66,13 +66,13 @@
         <div class="lil-container">
             <div class="row">
                 <div class="prod1">
-                    <img src="img/product1.jpg">
+                    <img src="../assets/img/img05.jpg">
                 </div>
                 <div class="prod1">
-                    <img src="img/product2.jpg">
+                    <img src="../assets/img/img13.jpg">
                 </div>
                 <div class="prod1">
-                    <img src="img/product3.jpg">
+                    <img src="../assets/img/img06.jpg">
                 </div>
             </div>
         </div>
@@ -81,36 +81,36 @@
      <div class="title"><p>精選商品</p></div>
         <div class="producutimg">
           <div class="producutimg1">
-              <a href="#"><img src="img/product2.3.jpg" class="p"></a>
-              <p>XXX</p>
-              <p>$100</p>
+              <a href="#"><img src="../assets/img/img18.jpg" class="p"></a>
+              <p>🧋珍珠奶茶造型飲料提袋🧋</p>
+              <p>$400</p>
           </div>
           <div class="producutimg2">
-              <a href="#"><img src="img/product3.2.jpg" class="p"></a>
-              <p>XXX</p>
-              <p>$100</p>
+              <a href="#"><img src="../assets/img/img23.jpg" class="p"></a>
+              <p>🪻桔梗鏤空花花證件掛繩🪻</p>
+              <p>$350</p>
           </div>
           <div class="producutimg3">
-              <a href="#"><img src="img/product5.1.jpg" class="p"></a>
-              <p>XXX</p>
-              <p>$100</p>
+              <a href="#"><img src="../assets/img/img27.jpg" class="p"></a>
+              <p>👜純色鏤空俏皮小包👜</p>
+              <p>$350</p>
           </div>
         </div>
           <div class="producutimg">
           <div class="producutimg4">
-            <a href="#"><img src="img/product4.3.jpg" class="p"></a>
-            <p>XXX</p>
-            <p>$100</p>
+            <a href="#"><img src="../assets/img/img35.jpg" class="p"></a>
+            <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
+            <p>$700</p>
         </div>
         <div class="producutimg5">
-            <a href="#"><img src="img/product4.1.jpg" class="p"></a>
-            <p>XXX</p>
-            <p>$100</p>
+            <a href="#"><img src="../assets/img/img25.jpg" class="p"></a>
+            <p>🌸小黃花配色花花手機掛繩🌸</p>
+            <p>$700</p>
         </div>
         <div class="producutimg6">
-            <a href="#"><img src="img/product2.6.jpg" class="p"></a>
-            <p>XXX</p>
-            <p>$100</p>
+            <a href="#"><img src="../assets/img/img30.jpg" class="p"></a>
+            <p>👜純色鏤空俏皮小包👜</p>
+            <p>$890</p>
         </div>
         </div>
         </div>
@@ -120,11 +120,11 @@
         <div class="row">
             <div class="container1">
                 <div class="footer-col2">
-                    <img src="img/logo.jpg">                    
+                    <img src="../assets/img/img01.jpg">                    
                 </div>
                 <div class="footer-col3">
                     <a href="https://www.instagram.com/yuweaves/">
-                         <img class="ig" src="img/iglogo.png">
+                         <img class="ig" src="../assets/img/ig.png">
                     </a>
                 </div>
                 <div class="footer-col4">
