第三次註解

--- a/pages/hw02.html
+++ b/pages/hw02.html
@@ -92,9 +92,41 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
-    </div>      
+        </div>   
+    </div>   
+</div>   
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Jim</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★★</p>
+        <p>東西很可愛也很漂亮<br>
+           材質也不錯，繩子髒了還可以拿去洗</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Stanley</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p></p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Andrew</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★</p>
+        <p>品質:普通</p>
+        <p>舒適度:普通</p>
+        <p>穿起來就普普通通，還是可以拿來慢跑</p>
+    </div>
 </div>         
 <script>
     var slideIndex = 1;
