第四次註解

--- a/pages/hw02.html
+++ b/pages/hw02.html
@@ -103,7 +103,7 @@
     <div class="respond">
         <p>★★★★★</p>
         <p>東西很可愛也很漂亮<br>
-           材質也不錯，繩子髒了還可以拿去洗</p>
+            材質也不錯，繩子髒了也可以拿去洗</p>
     </div>
 </div>
 <div class="buyer">
@@ -113,7 +113,7 @@
     <br>
     <div class="respond">
         <p>★★★★</p>
-        <p></p>
+        <p>繽紛色彩，掛繩質感佳，滿意度百分百</p>
     </div>
 </div>
 <div class="buyer">
@@ -122,10 +122,8 @@
     </div>
     <br>
     <div class="respond">
-        <p>★★★</p>
-        <p>品質:普通</p>
-        <p>舒適度:普通</p>
-        <p>穿起來就普普通通，還是可以拿來慢跑</p>
+        <p>★★★★★</p>
+        <p>迷人的小黃花搭配花花掛繩，手機變得更有趣</p>
     </div>
 </div>         
 <script>
