--- a/pages/hw03.html
+++ b/pages/hw03.html
@@ -92,9 +92,38 @@
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
         </div>
-        <textarea class="comment" rows="12" ></textarea>   
     </div>      
-</div>         
+</div>    
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Sophia</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★★</p>
+        <p>可愛奶茶提袋，簡直是喝珍珠奶茶的最佳搭配</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Jackson</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>質感超好，珍珠奶茶造型提袋瞬間吸睛</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Emma/p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★★</p>
+        <p>喜歡這款奶茶提袋，滿滿珍珠，喝著喝著心情都變好了</p>
+    </div>
+</div>           
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
