第五次註解

--- a/pages/hw04.html
+++ b/pages/hw04.html
@@ -91,10 +91,39 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
+        </div>   
     </div>      
-</div>         
+</div> 
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Aiden</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>簡約網格，提袋有質感，超喜歡這個純色風格</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Ava</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>實用且時尚，網格提袋是我的新最愛</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Liam</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>純色設計搭配網格，提袋看起來很有質感，超滿意</p>
+    </div>
+</div>                   
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
