--- a/pages/hw05.html
+++ b/pages/hw05.html
@@ -87,10 +87,39 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
+        </div> 
     </div>      
-</div>         
+</div>    
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Isabella</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>文青小廢包太可愛，祖母方格設計太有質感了</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Noah</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>滿滿文青風格，祖母方格小廢包超適合潮流人士</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱: Mia</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>收到這個包包超開心，祖母方格的設計太有味道了</p>
+    </div>
+</div>                       
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
