--- a/pages/hw06.html
+++ b/pages/hw06.html
@@ -95,10 +95,39 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
+        </div>  
     </div>      
-</div>         
+</div>    
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Lucas</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>桔梗花鏤空，掛繩優雅，超滿意</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Harper</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>花花掛繩美輪美奐，質感一流</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:  Oliver </p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>桔梗鏤空設計，掛繩簡直是藝術品</p>
+    </div>
+</div>                            
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
