--- a/pages/hw07.html
+++ b/pages/hw07.html
@@ -85,10 +85,39 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
+        </div>  
     </div>      
-</div>         
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Amelia</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>時尚四股辮掛繩，男女皆宜，實用又有型</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Elijah</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>簡約設計，男女通用，四股辮手機掛繩好看實用</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱: Abigail</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>四股辮造型掛繩，性別不拘，風格十足</p>
+    </div>
+</div>                                
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
