--- a/pages/hw08.html
+++ b/pages/hw08.html
@@ -86,10 +86,40 @@
             <div class="button2">
                 <input type="button" value="直接購買" name="按鈕名稱" style="width:150px;height:50px;">
             </div>
-        </div>
-        <textarea class="comment" rows="12" ></textarea>   
+        </div>   
     </div>      
-</div>         
+</div> 
+
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Benjamin</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★★</p>
+        <p>網格提袋雙色搭配，時尚又實用，超滿意購買</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Charlotte</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★</p>
+        <p>雙色網格，提袋設計獨特，手感好，讚!</p>
+    </div>
+</div>
+<div class="buyer">
+    <div class="consumer_name">
+        <p>買家名稱:Mason</p>
+    </div>
+    <br>
+    <div class="respond">
+        <p>★★★★★</p>
+        <p>質感一流，雙色網格提袋，很有品味的購物體驗</p>
+    </div>
+</div>                       
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
