第六次註解

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,11 +17,11 @@
         <nav class="meun">
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
-                <li><a href="../pages/hw01.html">shop</a></li>
-                <a href="">
+                <li><a href="../pages/hw01.html">Shop</a></li>
+                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="#">Account</a></li>
+                <li><a href="../pages/log in.html">Account</a></li>
             </ul>
         </nav>
         <a>
