--- a/pages/hw02.html
+++ b/pages/hw02.html
@@ -7,26 +7,28 @@
     <link rel="stylesheet" href="../assets/css/hw02.css">
 </head>
 <body>
-    <div class="container">
+    <div class="header">
+        <div class="container">
         <div class="navbar">  
             <div class="logo">
                 <img src="../assets/img/img01.jpg" width="250px">
             </div>
-            <div class="meun">
-                <ul>
-                    <li><a href="../pages/index.html">Home</a></li>
-                    <li><a href="../pages/hw01.html">Shop</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Account</a></li>
-                </ul>
-            </div>  
-            <div>
-                <a href="../pages/cart.html" >
-                    <img src="../assets/img/car.png" width="30px" height="30px">
-                </a>    
-            </div>
-         </div>
-    </div>
+        <nav class="meun">
+            <ul>
+                <li><a href="../pages/index.html">Home</a></li>
+                <li><a href="../pages/hw01.html">Shop</a></li>
+                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                    <li>Contact</a></li>
+                </a>
+                <li><a href="../pages/log in.html">Account</a></li>
+            </ul>
+        </nav>
+        <a>
+            <a href="../pages/cart.html">
+                <img src="../assets/img/car.png" width="30px" height="30px">
+            </a>
+        </div>
+        </div>
          <nav class="navigationbar">
             <div class="dropdown">
                 <button class="dropbtn">手機</button>
