--- a/pages/log in.html
+++ b/pages/log in.html
@@ -7,6 +7,47 @@
     <title>Document</title>
 </head>
 <body>
+	<div class="header">
+        <div class="container">
+        <div class="navbar">  
+            <div class="logo">
+                <img src="../assets/img/img01.jpg" width="250px">
+            </div>
+        <nav class="meun">
+            <ul>
+                <li><a href="../pages/index.html">Home</a></li>
+                <li><a href="../pages/hw01.html">Shop</a></li>
+                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                    <li>Contact</a></li>
+                </a>
+                <li><a href="../pages/log in.html">Account</a></li>
+            </ul>
+        </nav>
+        <a>
+            <a href="../pages/cart.html">
+                <img src="../assets/img/car.png" width="30px" height="30px">
+            </a>
+        </div>
+        </div>
+         <nav class="navigationbar">
+            <div class="dropdown">
+                <button class="dropbtn">手機</button>
+                <div class="dropdown-content">
+                    <a href="#category1">Category 1</a>
+                    <a href="#category2">Category 2</a>
+                    <a href="#category3">Category 3</a>
+                </div>
+            </div>
+    
+            <div class="dropdown">
+                <button class="dropbtn">其他</button>
+                <div class="dropdown-content">
+                    <a href="#category1">Category 1</a>
+                    <a href="#category2">Category 2</a>
+                    <a href="#category3">Category 3</a>
+                </div>
+            </div>
+        </nav>
     <div class="container">
 		<h3 class="head_text">Log in/Sign UP</h1>
 	</div>
