第七次註解

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="#">
                     <li>Contact</a></li>
                 </a>
                 <li><a href="../pages/log in.html">Account</a></li>
@@ -81,34 +81,34 @@
      <div class="title"><p>精選商品</p></div>
         <div class="producutimg">
           <div class="producutimg1">
-              <a href="#"><img src="../assets/img/img18.jpg" class="p"></a>
+              <a href="../pages/hw03.html"><img src="../assets/img/img18.jpg" class="p"></a>
               <p>🧋珍珠奶茶造型飲料提袋🧋</p>
               <p>$400</p>
           </div>
           <div class="producutimg2">
-              <a href="#"><img src="../assets/img/img23.jpg" class="p"></a>
+              <a href="..//pages/hw06.html"><img src="../assets/img/img23.jpg" class="p"></a>
               <p>🪻桔梗鏤空花花證件掛繩🪻</p>
               <p>$350</p>
           </div>
           <div class="producutimg3">
-              <a href="#"><img src="../assets/img/img27.jpg" class="p"></a>
-              <p>👜純色鏤空俏皮小包👜</p>
+              <a href="../pages/hw04.html"><img src="../assets/img/img27.jpg" class="p"></a>
+              <p>🥤純色網格飲料提袋🥤</p>
               <p>$350</p>
           </div>
         </div>
           <div class="producutimg">
           <div class="producutimg4">
-            <a href="#"><img src="../assets/img/img35.jpg" class="p"></a>
+            <a href="../pages/hw07.html"><img src="../assets/img/img35.jpg" class="p"></a>
             <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
             <p>$700</p>
         </div>
         <div class="producutimg5">
-            <a href="#"><img src="../assets/img/img25.jpg" class="p"></a>
+            <a href="../pages/hw02.html"><img src="../assets/img/img25.jpg" class="p"></a>
             <p>🌸小黃花配色花花手機掛繩🌸</p>
             <p>$700</p>
         </div>
         <div class="producutimg6">
-            <a href="#"><img src="../assets/img/img30.jpg" class="p"></a>
+            <a href="../pages/hw09.html"><img src="../assets/img/img30.jpg" class="p"></a>
             <p>👜純色鏤空俏皮小包👜</p>
             <p>$890</p>
         </div>
