第八次註解

--- a/pages/hw02.html
+++ b/pages/hw02.html
@@ -9,26 +9,26 @@
 <body>
     <div class="header">
         <div class="container">
-        <div class="navbar">  
-            <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
-            </div>
-        <nav class="meun">
-            <ul>
-                <li><a href="../pages/index.html">Home</a></li>
-                <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
-                    <li>Contact</a></li>
+            <div class="navbar">  
+                <div class="logo">
+                    <img src="../assets/img/img01.jpg" width="150px">
+                </div>
+                <nav class="meun">
+                    <ul>
+                        <li><a href="../pages/index.html">Home</a></li>
+                        <li><a href="../pages/hw01.html">Shop</a></li>
+                        <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                            <li>Contact</a></li>
+                        </a>
+                        <li><a href="../pages/login.html">Account</a></li>
+                    </ul>
+                </nav>
+                <a href="../pages/cart.html">
+                    <img src="../assets/img/car.png" width="30px" height="30px">
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
-            </ul>
-        </nav>
-        <a>
-            <a href="../pages/cart.html">
-                <img src="../assets/img/car.png" width="30px" height="30px">
-            </a>
+            </div>
         </div>
-        </div>
+    </div>
          <nav class="navigationbar">
             <div class="dropdown">
                 <button class="dropbtn">手機</button>
@@ -80,13 +80,13 @@
     </div>
 
     <div class="text01">
-        <h2> 產品介紹<br></h2>
-        <p>全花系列700元<br>
-        <p>半花+伸縮系列600元<br></p>
-        <p>花花手機掛繩怎麼搭都好看<br></p>
-        <p>無論是簡單的素T、牛仔元素、多巴胺風都能輕鬆駕馭<br></p>
-        <p>是不可或缺的小配飾🤝🏻<br></p>
-        <p>純手工編織．顏色可自由混搭<br></p>
+        <h2> 產品介紹</h2>
+        <p>全花系列700元</p>
+        <p>半花+伸縮系列600元</p>
+        <p>花花手機掛繩怎麼搭都好看</p>
+        <p>無論是簡單的素T、牛仔元素、多巴胺風都能輕鬆駕馭</p>
+        <p>是不可或缺的小配飾🤝🏻</p>
+        <p>純手工編織．顏色可自由混搭</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
@@ -161,6 +161,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
