--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/checkout.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="175px">
             </div>
         <nav class="meun">
             <ul>
@@ -20,7 +20,7 @@
                 <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/login.html">Account</a></li>
             </ul>
         </nav>
         <a>
@@ -107,6 +107,11 @@
                     <div class="footer-col3">
                         <a href="https://www.instagram.com/yuweaves/">
                              <img class="ig" src="../assets/img/ig.png">
+                        </a>
+                    </div>
+                    <div class="footer-col3">
+                        <a href="mailto:jim20030917@gmail.com">
+                             <img class="ig" src="../assets/img/emal.jpg">
                         </a>
                     </div>
                     <div class="footer-col4">
