--- a/pages/hw01.html
+++ b/pages/hw01.html
@@ -11,7 +11,7 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
         <nav class="meun">
             <ul>
@@ -20,7 +20,7 @@
                 <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/login.html in.html">Account</a></li>
             </ul>
         </nav>
         <a>
