--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="#">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
                 <li><a href="../pages/login.html">Account</a></li>
@@ -31,25 +31,11 @@
         </div>
         </div>
 
-     <nav class="navigationbar">
-        <div class="dropdown">
-            <button class="dropbtn">手機</button>
-            <div class="dropdown-content">
-                <a href="#category1">Category 1</a>
-                <a href="#category2">Category 2</a>
-                <a href="#category3">Category 3</a>
+        <nav class="navigationbar">
+            <div class="dropdown">
+                <p>YU weavws</p>
             </div>
-        </div>
-
-        <div class="dropdown">
-            <button class="dropbtn">其他</button>
-            <div class="dropdown-content">
-                <a href="#category1">Category 1</a>
-                <a href="#category2">Category 2</a>
-                <a href="#category3">Category 3</a>
-             </div>
-        </div>
-    </nav>
+        </nav>
     <div class="header">
         <div class="row">
             <div class="col1">
@@ -57,7 +43,7 @@
                 <a href="../pages/hw01.html" class="btn">探索一下 &#8594;</a>
             </div>
             <div class="col2">
-                <img src="../assets/img/img04.jpg">
+                <img src="../assets/img/img04.jpg" width="850px">
             </div>
         </div>
         </div>
