--- a/pages/cart.html
+++ b/pages/cart.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
                 <li><a href="../pages/login.html">Account</a></li>
@@ -43,14 +43,14 @@
                     <div class="item_header item_body">
                             <div class="item_detail">
                                 <img src="../assets/img/img13.jpg">
-                                <div class="name">XXXX</div>
+                                <div class="name">🧋珍珠奶茶造型飲料提袋🧋</div>
                             </div>
                             
-                            <div class="price"><span>$</span>XXX</div>
+                            <div class="price"><span>$</span>400</div>
                             <div class="count">
                                     <input type="number" value="1">
                              </div>
-                            <div class="amount">XXX</div>
+                            <div class="amount">400</div>
                             <div class="operate">
                                 <button @click="handledelete(index)">刪除</button>
                             </div>
@@ -60,14 +60,14 @@
             <div class="item_header item_body">
                     <div class="item_detail">
                         <img src="../assets/img/img05.jpg">
-                        <div class="name">XXXX</div>
+                        <div class="name">🪻桔梗鏤空花花證件掛繩🪻<</div>
                     </div>
                     
-                    <div class="price"><span>$</span>XXX</div>
+                    <div class="price"><span>$</span>350</div>
                     <div class="count">
                         <input type="number" value="1">
                     </div>
-                    <div class="amount">XXX</div>
+                    <div class="amount">350</div>
                     <div class="operate">
                         <button @click="handledelete(index)">刪除</button>
                     </div>
