--- a/pages/hw02.html
+++ b/pages/hw02.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a href="../pages/index.html">Home</a></li>
                         <li><a href="../pages/hw01.html">Shop</a></li>
-                        <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                        <a href="../pages/team.html">
                             <li>Contact</a></li>
                         </a>
                         <li><a href="../pages/login.html">Account</a></li>
@@ -31,21 +31,7 @@
     </div>
          <nav class="navigationbar">
             <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
-    
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>🌸小黃花配色花花手機掛繩🌸</h1>
