--- a/pages/hw04.html
+++ b/pages/hw04.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
                 <li><a href="../pages/login.html">Account</a></li>
@@ -29,23 +29,9 @@
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
+        <nav class="navigationbar">
             <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
-    
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>🥤純色網格飲料提袋🥤</h1>
@@ -71,21 +57,20 @@
     </div>
 
     <div class="text01">
-        <h2> 產品介紹<br></h2>
-        <p>💰350元<br>
-        身為台灣人，我最喜歡的就是台灣的手搖飲料了<br>
-        心情好，喝。心情壞，喝<br>
-        上班中，喝。剛下課，喝<br>
-        吃中餐，喝。吃晚餐，喝<br>
-        看電影，喝。發薪水，喝<br>
-        天氣熱，喝。天氣冷，喝<br>       
-        無論何時都想喝飲料🙌🏻<br>
-        但往往飲料都沒辦法在短時間內喝完<br>
-        這時就需要飲料提袋的幫忙啦！<br>
-        這款真的 超～耐～用～<br>
-        大部分飲料杯皆適用<br>
-        純手工編織🧶
-        </p>
+        <h2> 產品介紹</h2>
+        <p>💰350元</p>
+        <p>身為台灣人，我最喜歡的就是台灣的手搖飲料了</p>
+        <p>心情好，喝。心情壞，喝</p>
+        <p>上班中，喝。剛下課，喝</p>
+        <p>吃中餐，喝。吃晚餐，喝</p>
+        <p>看電影，喝。發薪水，喝</p>
+        <p>天氣熱，喝。天氣冷，喝</p>       
+        <p>無論何時都想喝飲料🙌🏻</p>
+        <p>但往往飲料都沒辦法在短時間內喝完</p>
+        <p>這時就需要飲料提袋的幫忙啦！</p>
+        <p>這款真的 超～耐～用～</p>
+        <p>大部分飲料杯皆適用</p>
+        <p>純手工編織🧶</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
