--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
         <h1>Log in 登入</h1>
         <input type="text" placeholder="帳號"/>
         <input type="password" placeholder="密碼"/>
-        <input type="submit" value="登入"/>
+        <input type="submit" value="登入"  href="../pages/MemberCentre.html"/>
         <a href="../pages/register.html">註冊會員^_^</a>  
     </form>
 
